feat: enums list with doc
