# app/Http/Controllers/Controller.php
@@ -17,4 +17,13 @@ class Controller extends BaseController
      *   )
      * )
      */
+
+    /**
+     *     @OA\Schema(
+     *         schema="enumJson",
+     *         @OA\Xml(name="InfoData"),
+     *         @OA\Property(property="id", type="integer", example="1"),
+     *         @OA\Property(property="name", type="string", example="item name"),
+     *     )
+     */
 }
